# memclave-client-library

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  build.sh  mainpage.dox  mram.csv  mram.ipynb  run.sh  run_bfs.py  run_mlp.py
common/: CMakeLists.txt
common/include/common/: aes.h  channel.h  dpu-msg.h  vci-msg.h
data/: aead.csv  chacha-multi-tasklet.csv  chacha-single-tasklet.csv  mram-upmem.csv  mram.csv
examples/: add.c  multi-tasklet.c
examples/BFS/: bfs.c  mram-management.h
examples/BFS/support/: common.h  graph.h  params.h  timer.h  utils.h
examples/BS/: bs.c
examples/BS/support/: params.h  prim_results.h
examples/HST-L/: hstl.c
examples/HST-L/support/: common.h  params.h
examples/HST-S/: hsts.c
examples/HST-S/support/: common.h  params.h
examples/MLP/: mlp.c
examples/MLP/support/: params.h  timer.h
examples/NW/: nw.c
examples/RED/: red.c
examples/RED/support/: params.h
examples/SCAN-RSS/: scanrss.c
examples/SCAN-SSA/: scanssa.c
examples/SEL/: sel.c
examples/SpMV/: mram-management.h  spmv.c
examples/SpMV/support/: matrix.h  params.h  prim_results.h
examples/TRNS/: trns.c
examples/TRNS/support/: params.h
examples/TS/: ts.c
examples/UNI/: uni.c
examples/UNI/support/: params.h
examples/VA/: va.c
examples/VA/support/: common.h  params.h
examples/crypto-bench/: main.c
examples/debug/: main.c
examples/fsl-test/: main.c
examples/gemv/: gemv.c
examples/gemv/support/: common.h  params.h
examples/mbench/: mbench.c
examples/mbench/support/: common.h  params.h
examples/mram/: main.c
examples/sk-load-bench/: main.c
examples/xchg/: main.c
misc/upmem-mram-baseline/: CMakeLists.txt  main.c
src/: vud.c  vud.h  vud_ime.c  vud_ime.h  vud_log.h  vud_mem.c  vud_mem.h  vud_pool.c  vud_pool.h  vud_sk.c  vud_sk.h
